After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745052 - Icon theme code assumes directories with mtime 0 don't exist
Icon theme code assumes directories with mtime 0 don't exist
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Themes
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-02-23 20:52 UTC by Daniel Drake
Modified: 2015-02-23 22:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-icontheme-allow-directories-with-mtime-0.patch (2.97 KB, patch)
2015-02-23 20:53 UTC, Daniel Drake
accepted-commit_now Details | Review

Description Daniel Drake 2015-02-23 20:52:12 UTC
ostree systems deploy files and directories with an mtime of 0, background: https://mail.gnome.org/archives/ostree-list/2013-December/msg00001.html

GTK+ icon theme code assumes that directories with mtime 0 don't exist, so no icons appear. Here's a patch to make it track directory existence in a more precise way.
Comment 1 Daniel Drake 2015-02-23 20:53:13 UTC
Created attachment 297715 [details] [review]
0001-icontheme-allow-directories-with-mtime-0.patch
Comment 2 Matthias Clasen 2015-02-23 21:02:23 UTC
Review of attachment 297715 [details] [review]:

sure, looks fine
Comment 3 Daniel Drake 2015-02-23 21:12:11 UTC
Thanks for the fast review.
https://git.gnome.org/browse/gtk+/commit/?id=aba2de34436035513b11faa2da4c7c56cc38ede9
Comment 4 Cosimo Cecchi 2015-02-23 21:14:44 UTC
I think this should also go in GTK2 if a similar problem exists in that version of the code.
Comment 5 Matthias Clasen 2015-02-23 21:36:44 UTC
good point. Please make it so
Comment 6 Daniel Drake 2015-02-23 22:54:16 UTC
As the GTK2 patch was identical, just needed a trivial rediff, I pushed it directly after testing with GIMP:

https://git.gnome.org/browse/gtk+/commit/?h=gtk-2-24&id=c5afe319ad87840dc579b75806121434f02dd14e

Thanks!